--- a/index.html
+++ b/index.html
@@ -56,25 +56,45 @@
                 <h2 class="visually-hidden">Features</h2>
                 <ul class="features-list">
                     <li class="features-item">
+                        <div class="features-item-container">
+                            <svg class="features-item-icon" width="64" height="64">
+                                <use href="./images/icons.svg#icon-antenna-1"></use>
+                            </svg>
+                        </div>
                         <h3 class="features-subtitle">Strategy</h3>
                         <p class="features-item-text">Our goal is to identify the business problem to walk away with the
                             perfect and creative solution.
                         </p>
                     </li>
                     <li class="features-item">
+                        <div class="features-item-container">
+                            <svg class="features-item-icon" width="64" height="64">
+                                <use href="./images/icons.svg#icon-clock-1"></use>
+                            </svg>
+                        </div>
                         <h3 class="features-subtitle">Punctuality</h3>
                         <p class="features-item-text">Bring the key message to the brand's audience for the best price
                             within the shortest possible
                             time.</p>
                     </li>
                     <li class="features-item">
+                        <div class="features-item-container">
+                            <svg class="features-item-icon" width="64" height="64">
+                                <use href="./images/icons.svg#icon-diagram-1"></use>
+                            </svg>
+                        </div>
                         <h3 class="features-subtitle">Diligence</h3>
                         <p class="features-item-text">Research and confirm brands that present the strongest digital
                             growth
-                            opportunities and minimize
+                            opportunities and minifeatures-item-iconmize
                             risk.</p>
                     </li>
                     <li class="features-item">
+                        <div class="features-item-container">
+                            <svg class="features-item-icon" width="64" height="64">
+                                <use href="./images/icons.svg#icon-astronaut-1"></use>
+                            </svg>
+                        </div>
                         <h3 class="features-subtitle">Technologies</h3>
                         <p class="features-item-text">Design practice focused on digital experiences. We bring forth a
                             deep
@@ -93,6 +113,24 @@
                         <div class="team-image-container">
                             <h3 class="team-subtitle">Mark Guerrero</h3>
                             <p class="team-item-text">Product Designer</p>
+                            <ul class="team-soc-list">
+                                <li class="team-soc-item"><a href="" class="team-soc-link"><svg class="team-soc-icon"
+                                            width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram-2"></use>
+                                        </svg></a></li>
+                                <li class="team-soc-item"><a href="" class="team-soc-link"><svg class="team-soc-icon"
+                                            width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                                        </svg></a></li>
+                                <li class="team-soc-item"><a href="" class="team-soc-link"><svg class="team-soc-icon"
+                                            width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook-1"></use>
+                                        </svg></a></li>
+                                <li class="team-soc-item"><a href="" class="team-soc-link"><svg class="team-soc-icon"
+                                            width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                        </svg></a></li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-item">
@@ -100,6 +138,24 @@
                         <div class="team-image-container">
                             <h3 class="team-subtitle">Tom Ford</h3>
                             <p class="team-item-text">Frontend Developer</p>
+                            <ul class="team-soc-list">
+                                <li class="team-soc-item"><a href="" class="team-soc-link"><svg class="team-soc-icon"
+                                            width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram-2"></use>
+                                        </svg></a></li>
+                                <li class="team-soc-item"><a href="" class="team-soc-link"><svg class="team-soc-icon"
+                                            width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                                        </svg></a></li>
+                                <li class="team-soc-item"><a href="" class="team-soc-link"><svg class="team-soc-icon"
+                                            width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook-1"></use>
+                                        </svg></a></li>
+                                <li class="team-soc-item"><a href="" class="team-soc-link"><svg class="team-soc-icon"
+                                            width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                        </svg></a></li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-item">
@@ -107,6 +163,24 @@
                         <div class="team-image-container">
                             <h3 class="team-subtitle">Camila Garcia</h3>
                             <p class="team-item-text">Marketing</p>
+                            <ul class="team-soc-list">
+                                <li class="team-soc-item"><a href="" class="team-soc-link"><svg class="team-soc-icon"
+                                            width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram-2"></use>
+                                        </svg></a></li>
+                                <li class="team-soc-item"><a href="" class="team-soc-link"><svg class="team-soc-icon"
+                                            width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                                        </svg></a></li>
+                                <li class="team-soc-item"><a href="" class="team-soc-link"><svg class="team-soc-icon"
+                                            width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook-1"></use>
+                                        </svg></a></li>
+                                <li class="team-soc-item"><a href="" class="team-soc-link"><svg class="team-soc-icon"
+                                            width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                        </svg></a></li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-item">
@@ -114,6 +188,24 @@
                         <div class="team-image-container">
                             <h3 class="team-subtitle">Daniel Wilson</h3>
                             <p class="team-item-text">UI Designer</p>
+                            <ul class="team-soc-list">
+                                <li class="team-soc-item"><a href="" class="team-soc-link"><svg class="team-soc-icon"
+                                            width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram-2"></use>
+                                        </svg></a></li>
+                                <li class="team-soc-item"><a href="" class="team-soc-link"><svg class="team-soc-icon"
+                                            width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                                        </svg></a></li>
+                                <li class="team-soc-item"><a href="" class="team-soc-link"><svg class="team-soc-icon"
+                                            width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook-1"></use>
+                                        </svg></a></li>
+                                <li class="team-soc-item"><a href="" class="team-soc-link"><svg class="team-soc-icon"
+                                            width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                        </svg></a></li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
@@ -124,42 +216,85 @@
                 <h2 class="portfolio-title">Our Portfolio</h2>
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
-                        <img class="portfolio-image" src="./images/banking.jpg" alt="Banking App" width="360">
+                        <div class="cover-wrap">
+                            <img class="portfolio-image" src="./images/banking.jpg" alt="Cashless Payment" width="360">
+                            <p class="cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                                Calorie
+                                Tracker App ·
+                                Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="portfolio-item-container">
                             <h3 class="portfolio-subtitle">Banking App</h3>
                             <p class="portfolio-item-text">App</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-image" src="./images/cashless.jpg" alt="Cashless Payment" width="360">
+                        <div class="cover-wrap">
+                            <img class="portfolio-image" src="./images/cashless.jpg" alt="Cashless Payment" width="360">
+                            <p class="cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                                Calorie
+                                Tracker App ·
+                                Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="portfolio-item-container">
                             <h3 class="portfolio-subtitle">Cashless Payment</h3>
                             <p class="portfolio-item-text">Marketing</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-image" src="./images/meditation.jpg" alt="Meditation App" width="360">
+                        <div class="cover-wrap">
+                            <img class="portfolio-image" src="./images/meditation.jpg" alt="Cashless Payment"
+                                width="360">
+                            <p class="cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                                Calorie
+                                Tracker App ·
+                                Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="portfolio-item-container">
                             <h3 class="portfolio-subtitle">Meditation App</h3>
                             <p class="portfolio-item-text">App</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-image" src="./images/taxi.jpg" alt="Taxi Service" width="360">
+                        <div class="cover-wrap">
+                            <img class="portfolio-image" src="./images/taxi.jpg" alt="Cashless Payment" width="360">
+                            <p class="cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                                Calorie
+                                Tracker App ·
+                                Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="portfolio-item-container">
                             <h3 class="portfolio-subtitle">Taxi Service</h3>
                             <p class="portfolio-item-text">Marketing</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-image" src="./images/screen.jpg" alt="Screen Illustrations" width="360">
+                        <div class="cover-wrap">
+                            <img class="portfolio-image" src="./images/screen.jpg" alt="Cashless Payment" width="360">
+                            <p class="cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                                Calorie
+                                Tracker App ·
+                                Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="portfolio-item-container">
                             <h3 class="portfolio-subtitle">Screen Illustrations</h3>
                             <p class="portfolio-item-text">Design</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-image" src="./images/online.jpg" alt="Online Courses" width="360">
+                        <div class="cover-wrap">
+                            <img class="portfolio-image" src="./images/online.jpg" alt="Cashless Payment" width="360">
+                            <p class="cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                                Calorie
+                                Tracker App ·
+                                Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="portfolio-item-container">
                             <h3 class="portfolio-subtitle">Online Courses</h3>
                             <p class="portfolio-item-text">Marketing</p>
@@ -174,6 +309,28 @@
             <a class="footer-logo" href="./index.html">Web<span class="footer-logo-span">Studio</span></a>
             <p class="footer-text"> Increase the flow of customers and sales for your business with digital marketing &
                 growth solutions.</p>
+        </div>
+        <div class="footer-social-container">
+            <p class=" footer-text-social">Social media</p>
+            <ul class="footer-soc-list">
+                <li class="footer-soc-item"><a href="" class="footer-soc-link"><svg class="footer-soc-icon" width="24"
+                            height="24">
+                            <use href="./images/icons.svg#icon-instagram-2"></use>
+                        </svg></a></li>
+                <li class="footer-soc-item"><a href="" class="footer-soc-link"><svg class="footer-soc-icon" width="24"
+                            height="24">
+                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                        </svg></a></li>
+                <li class="footer-soc-item"><a href="" class="footer-soc-link"><svg class="footer-soc-icon" width="24"
+                            height="24">
+                            <use href="./images/icons.svg#icon-facebook-1"></use>
+                        </svg></a></li>
+                <li class="footer-soc-item"><a href="" class="footer-soc-link"><svg class="footer-soc-icon" width="24"
+                            height="24">
+                            <use href="./images/icons.svg#icon-linkedin-1"></use>
+                        </svg></a></li>
+            </ul>
+
         </div>
     </footer>
 </body>
