--- a/index.html
+++ b/index.html
@@ -306,31 +306,33 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <a class="footer-logo" href="./index.html">Web<span class="footer-logo-span">Studio</span></a>
-            <p class="footer-text"> Increase the flow of customers and sales for your business with digital marketing &
-                growth solutions.</p>
-        </div>
-        <div class="footer-social-container">
-            <p class=" footer-text-social">Social media</p>
-            <ul class="footer-soc-list">
-                <li class="footer-soc-item"><a href="" class="footer-soc-link"><svg class="footer-soc-icon" width="24"
-                            height="24">
-                            <use href="./images/icons.svg#icon-instagram-2"></use>
-                        </svg></a></li>
-                <li class="footer-soc-item"><a href="" class="footer-soc-link"><svg class="footer-soc-icon" width="24"
-                            height="24">
-                            <use href="./images/icons.svg#icon-twitter-1"></use>
-                        </svg></a></li>
-                <li class="footer-soc-item"><a href="" class="footer-soc-link"><svg class="footer-soc-icon" width="24"
-                            height="24">
-                            <use href="./images/icons.svg#icon-facebook-1"></use>
-                        </svg></a></li>
-                <li class="footer-soc-item"><a href="" class="footer-soc-link"><svg class="footer-soc-icon" width="24"
-                            height="24">
-                            <use href="./images/icons.svg#icon-linkedin-1"></use>
-                        </svg></a></li>
-            </ul>
-
+            <div class="footer-logo-container">
+                <a class="footer-logo" href="./index.html">Web<span class="footer-logo-span">Studio</span></a>
+                <p class="footer-text">Increase the flow of customers and sales for your business with digital
+                    marketing &
+                    growth solutions.</p>
+            </div>
+            <div class="footer-social">
+                <p class=" footer-text-social">Social media</p>
+                <ul class="footer-soc-list">
+                    <li class="footer-soc-item"><a href="" class="footer-soc-link"><svg class="footer-soc-icon"
+                                width="24" height="24">
+                                <use href="./images/icons.svg#icon-instagram-2"></use>
+                            </svg></a></li>
+                    <li class="footer-soc-item"><a href="" class="footer-soc-link"><svg class="footer-soc-icon"
+                                width="24" height="24">
+                                <use href="./images/icons.svg#icon-twitter-1"></use>
+                            </svg></a></li>
+                    <li class="footer-soc-item"><a href="" class="footer-soc-link"><svg class="footer-soc-icon"
+                                width="24" height="24">
+                                <use href="./images/icons.svg#icon-facebook-1"></use>
+                            </svg></a></li>
+                    <li class="footer-soc-item"><a href="" class="footer-soc-link"><svg class="footer-soc-icon"
+                                width="24" height="24">
+                                <use href="./images/icons.svg#icon-linkedin-1"></use>
+                            </svg></a></li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
