--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container">
+        <div class="container footer-container">
             <div class="footer-logo-container">
                 <a class="footer-logo" href="./index.html">Web<span class="footer-logo-span">Studio</span></a>
                 <p class="footer-text">Increase the flow of customers and sales for your business with digital
